# LoopForge

./: .gitignore  Dockerfile  Dockerfile.proxy  README.md  amber-manifest.json5  proxy.py  pyproject.toml  requirements.txt
.github/workflows/: test-and-publish.yml
src/: agent.py  executor.py  loopforge.py  messenger.py  server.py
tests/: conftest.py  test_agent.py
