[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopforge"
version = "1.0.0"
description = "LoopForge - A self-correcting coding agent powered by Gemini 2.0 Flash"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.37.0",
    "uvicorn>=0.27.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
required-version = ">=0.1.0"