[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopforge"
version = "0.1.0"
description = "LoopForge: A Gemini 2.0 Flash powered coding agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk==0.3.10",
    "starlette>=0.36.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
required-version = ">=0.4.0"